# hipdemo

./: .clangd  .gitmodules  CMakeLists.txt  flake.nix
scripts/debug/: build.sh  build_and_run.ps1  build_and_run.sh  build_hiprt.sh  configure.ps1  configure.sh
scripts/debug/linux/: build.sh  build_and_run.sh  build_hiprt.sh  configure.sh
scripts/debug/win/: build.ps1  build_and_run.ps1  build_hiprt.ps1  configure.ps1
scripts/release/: build_and_run.sh  configure.sh
src/app/: CMakeLists.txt  app.c  app.h  main.c
src/core/: CMakeLists.txt  file.c  string.c  viewport.c
src/core/allocators/: allocator.c  safe_allocator.c  std_allocator.c
src/core/collections/: darray.c  hash_map.c
src/core/include/ww/: defines.h  exit.h  file.h  log.h  math.h  prim_types.h  string.h  viewport.h
src/core/include/ww/allocators/: allocator.h  safe_allocator.h  std_allocator.h
src/core/include/ww/collections/: darray.h  hash_map.h
src/core/include/ww/renderer/: camera.h  camera_def_impl.h  object_instance.h  renderer.h  result.h  scene.h  triangle_mesh.h
src/core/include/ww/renderer3d/: camera.h  camera_def_impl.h  object_instance.h  renderer3d.h  result.h  scene.h  triangle_mesh.h
src/core/renderer/: camera.c  camera_def_impl.c  object_instance.c  renderer.c  scene.c  triangle_mesh.c
src/core/renderer3d/: camera.c  camera_def_impl.c  object_instance.c  renderer.c  scene.c  triangle_mesh.c
src/hip/: CMakeLists.txt  common.c  hip_common.c  hip_renderer.c  renderer.c
src/hip/include/ww/hip/: common.h  renderer.h
src/hip/kernels/: hip_renderer.hip.cpp
src/hiprt/: CMakeLists.txt  hiprt_common.cpp  hiprt_common.h  hiprt_object_instance.cpp  hiprt_object_instance.h  hiprt_renderer.cpp  hiprt_scene.cpp  hiprt_scene.h  hiprt_triangle_mesh.cpp  hiprt_triangle_mesh.h  renderer.cpp
src/hiprt/include/ww/hiprt/: renderer.h
src/hiprt/kernels/: hiprt_renderer.hip.cpp
src/hiprt/kernels/types/: camera.h
src/renderer/: CMakeLists.txt  camera.c  object_instance.c  renderer.c  scene.c
src/renderer/include/ww/: renderer.h
src/renderer/include/ww/renderer/: camera.h  camera_def_impl.h  scene.h
src/viewport/: CMakeLists.txt  viewport.c
src/viewport/include/ww/: viewport.h
src/vma/: CMakeLists.txt  vma.h
src/vulkan/: CMakeLists.txt  common.c  viewport.c  viewport_no_gp.c  vulkan_ext_funcs_linux.c  vulkan_ext_funcs_win32.c  vulkan_viewport.c  vulkan_viewport_no_gp.c
src/vulkan/include/ww/vulkan/: common.h  viewport.h  viewport_no_gp.h
src/vulkan/shaders/: fullscreen_quad.frag  fullscreen_quad.vert
submodules/: hiprt_build_instuctions.txt
